[gd_scene load_steps=3 format=3 uid="uid://catcxjgq5vi7m"]

[ext_resource type="Script" path="res://scenes/win_screen.gd" id="1_nye7h"]
[ext_resource type="Texture2D" uid="uid://3ghardfnh6ee" path="res://assets/win-screen.png" id="2_xu4lj"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nye7h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xu4lj")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 155.915
offset_right = 80.0
offset_bottom = 344.915
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/AspectRatioContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgain" type="Button" parent="Control/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again
"
autowrap_mode = 3

[node name="Credits" type="Button" parent="Control/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="Control/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Control/AspectRatioContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Control/AspectRatioContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/AspectRatioContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
